objects/Centennial_Campaign__c.object
<CustomObject>
    <description>Object to capture high-level participation numbers as a result of the Centennial Campaign collaboration.</description>
    <fields>
        <fullName>Adult_Swim_Improving_Skills_and_Swimming__c</fullName>
        <label>Adult Swim—Improving Skills and Swimming</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adult_Swim_Learning_the_Basics__c</fullName>
        <label>Adult Swim—Learning the Basics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basic_Swim_Instructor__c</fullName>
        <label>Basic Swim Instructor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Centennial_Campaign_Reporting__c</fullName>
        <defaultValue>(&quot;The report below is intended to capture high-level participation numbers as a result of the Centennial Campaign collaboration. In addition, please be certain to formally report all of your course activity through normal processes, such as through http://www.redcross.org/courserecords or by submitting course records to the Training Support Center.&quot;)</defaultValue>
        <label>Centennial Campaign Reporting</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>We welcome any comments or anecdotes about your experience and participation in the Centennial Campaign.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Centennial Campaigns (Facility Name)</relationshipLabel>
        <relationshipName>Centennial_Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Junior_Lifeguarding__c</fullName>
        <label>Junior Lifeguarding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learn_to_Swim_Level_1__c</fullName>
        <label>Learn-to-Swim Level 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learn_to_Swim_Level_2__c</fullName>
        <label>Learn-to-Swim Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learn_to_Swim_Level_3__c</fullName>
        <label>Learn-to-Swim Level 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learn_to_Swim__c</fullName>
        <label>Learn-to-Swim</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeguarding_Instructor_Trainer__c</fullName>
        <label>Lifeguarding Instructor Trainer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeguarding_Instructor__c</fullName>
        <label>Lifeguarding Instructor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeguarding_Management__c</fullName>
        <label>Lifeguarding Management</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifeguarding__c</fullName>
        <label>Lifeguarding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Centennial Campaigns</relationshipLabel>
        <relationshipName>Centennial_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Centennial Campaigns</relationshipLabel>
        <relationshipName>Centennial_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_and_Child_Aquatics__c</fullName>
        <label>Parent and Child Aquatics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parents_Caregivers_Pediatric_CPR_AED__c</fullName>
        <label>Parents/Caregivers - Pediatric CPR/AED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parents_Caregivers_Water_Safety_Educat__c</fullName>
        <label>Parent/Caregivers-Water Safety Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preschool_Level_1__c</fullName>
        <label>Preschool Level 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preschool_Level_2__c</fullName>
        <label>Preschool Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preschool_Level_3__c</fullName>
        <label>Preschool Level 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reporting_of_Total_Participation__c</fullName>
        <defaultValue>(&quot;Please report the total number of individuals who participated the Learn-to-Swim program this month, to include Parent and Child Aquatics, Preschool Aquatics, Learn-to-Swim Levels 1 - 3 and Adult Swim.&quot;)</defaultValue>
        <label>Reporting of Total Participation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Students_Taught__c</fullName>
        <formula>Adult_Swim_Improving_Skills_and_Swimming__c + Adult_Swim_Learning_the_Basics__c + Basic_Swim_Instructor__c + Junior_Lifeguarding__c + Learn_to_Swim__c + Learn_to_Swim_Level_1__c + Learn_to_Swim_Level_2__c + Learn_to_Swim_Level_3__c + Lifeguarding__c + Lifeguarding_Instructor__c + Lifeguarding_Instructor_Trainer__c + Lifeguarding_Management__c + Parents_Caregivers_Water_Safety_Educat__c + Parent_and_Child_Aquatics__c + Parents_Caregivers_Pediatric_CPR_AED__c + Preschool_Level_1__c + Preschool_Level_2__c + Preschool_Level_3__c + Water_Safety_Instructor__c + Water_Safety_Instructor_Trainer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Students Taught</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Safety_Instructor_Trainer__c</fullName>
        <label>Water Safety Instructor Trainer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Safety_Instructor__c</fullName>
        <label>Water Safety Instructor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Centennial Campaign</label>
    <nameField>
        <displayFormat>CCID - {00000000}</displayFormat>
        <label>CC ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Centennial Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>